<resources>
    <string name="app_name">Buy&amp;Sell</string>


    <string name="default_notification_channel_id">id_554121212121</string>
    <string name="fcm_Server_key">AAAAWiiRFlc:APA91bH_ktyDtfQ1zjVzFICPs5t0qmkmFOpOYMIb7b1hPEVX4kbjsqjHp2JxSN9PxZaqouphWrJrs1MZ8KlL-efxj_iIVAK4brZTIgqs7FcL3X2Y3oPGE_mF_9VNJwTfCClkD_CbSQVF</string>


    <string name="signUpTxt">Signup</string>
    <string name="logInTxt">Log In</string>
    <string name="loginText">Login</string>
    <string name="emailTxt">Email</string>
    <string name="pwdText">Password</string>
    <string name="fogPwdText">Forgot Password?</string>
    <string name="orContinueTxt">Or continue with other</string>
    <string name="newUserSignUpTxt">New User? Signup</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="signUpTerm">By singing up you are agreeing to the\nterms and conditions and privacy policy</string>
    <string name="locationTxt">Location</string>
    <string name="locationTempOneTxt">Current Location</string>
    <string name="auto_locate">Auto Locate</string>
    <string name="terrmInfoForgetPwd">We have send you a email to reset your password. please check your submitted email.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contect_number">Contect Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="verified">Verified</string>
    <string name="verifty">Verify</string>


    <string name="facebook_app_id">759685068854313</string>
    <string name="fb_login_protocol_scheme">fb759685068854313</string>
    <string name="facebook_client_token">e2cca2bc0da89e619170ccf737a91b24</string>
    <string name="server_client_id">AIzaSyDUjURueqeUBomJ-4cVUJzI1yoMevkPaww</string>
    <string name="crtPwd">CurrentPassword</string>
    <string name="crtPwdHint">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="cngPwd">Change Password</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_email">Enter Email</string>
    <string name="description">Description</string>
    <string name="type_your_query_here">Type your query here...</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="deleteAccountMsg">Are you sure you want to delete your account?</string>
    <string name="not_now">Not Now</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="logoutAccountMessage">Are you sure you want to Logout your account?</string>
    <string name="one_time_password">One Time Password</string>
    <string name="otpDialogMsg">We have send you a OTP to your registered phone number.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="dash">-</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="welcome_to_buy_amp_sell"><![CDATA[Welcome to Buy&Sell]]></string>
    <string name="you_need_to_login_or_register">You need to Login or Register</string>
    <string name="login_or_register">Login or Register</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="verify_account">Verify account</string>
    <string name="verifyDialogMsg">We have send you a verification email to you registered email. Please verify your email.</string>
    <string name="frg_pwd_msg">We have send you a email to reset your password. Please check your submitted email.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_verification">Send Verification</string>
    <string name="clear">Clear</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="change_password">Change Password</string>
    <string name="search">Search</string>
    <string name="searchResult">Search Result</string>
    <string name="browse_category">Browse Category</string>
    <string name="selectCategory">Select Category"</string>

    <string name="see_all">See all</string>
    <string name="price_range">Price Range</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="_120">₹120</string>
    <string name="rupeSign">₹</string>
    <string name="_180">₹180</string>
    <string name="method_of_receiving">Method of Receiving</string>
    <string name="shiping">Shiping</string>
    <string name="pickup">Pickup</string>
    <string name="short_by">Sort By</string>
    <string name="newest_first">Newest First</string>
    <string name="closest">Closest</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="apply">Apply</string>
    <string name="temp_address">95128 San Jose, CA</string>
    <string name="temp_name">Jonny Depp</string>
    <string name="temp_mail">jonny@gmail.com</string>
    <string name="temp_since">Member since 2018</string>
    <string name="verify">Verify</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="post">Post</string>
    <string name="my_ads">My Ads</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="temp_product">Iphone 13 pro 256gb in ne...</string>
    <string name="details">Details</string>
    <string name="brand">Brand</string>
    <string name="year">Year</string>
    <string name="fuel">Fuel</string>
    <string name="petrol">Petrol</string>
    <string name="_2023">2023</string>
    <string name="ford">Ford</string>
    <string name="filter">Filter</string>
    <string name="_1300">₹1300</string>
    <string name="transmission">Transmission</string>
    <string name="automatic">Automatic</string>
    <string name="no_of_owners">No. of Owners</string>

    <string name="km_driven">Km Driven</string>
    <string name="see_profile">See Profile</string>
    <string name="ad_posted_at">Ad posted At</string>
    <string name="report_this_ad"><u>Report this ad</u></string>
    <string name="related_ads">Related Ads</string>
    <string name="ask">Ask</string>
    <string name="make_offer">Make Offer</string>
    <!--<string name="googleApi">AIzaSyAHi3SYuyqrAr4-vUfgAqWGjjyURI_h-Fs</string>-->
     <string name="googleApi">AIzaSyDOGwVObwVRbB7ue1rqkvyFbarZFDBHeuM</string>
<!--        <string name="googleApi">AIzaSyA0uznwGG3IcwMc35Uvglsc6bL2dbcEQVQ</string>-->

    <string name="_1_min_ago">1 min ago</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="title">Title</string>
    <string name="add_title">Add Title</string>
    <string name="discriptionHint">Description what you are selling</string>
    <string name="next">Next</string>
    <string name="addSomeData">Add some info</string>
    <string name="myProfile">My Profile</string>

    <string name="uploadImage">Upload Images</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_model">Select Model</string>
    <string name="select_varient">Select Varient</string>
    <string name="cng_amp_hybrids"><![CDATA[CNG & Hybrids]]></string>
    <string name="diesel">Diesel</string>
    <string name="electric">Electric</string>
    <string name="manual">Manual</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="_4">4+</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="press_and_drag_to_reorder_photos">Press and Drag to reorder photos</string>
    <string name="price">Price</string>
    <string name="_00_00">00.00</string>
    <string name="_0">0</string>
    <string name="min_bid">Min Bid</string>
    <string name="post_now">Post Now</string>
    <string name="favourite">Favourite</string>
    <string name="active">Active</string>
    <string name="sold">Sold</string>
    <string name="selling">Selling</string>
    <string name="buying">Buying</string>
    <string name="my_bids">My Bids</string>
    <string name="type_here">Type here..</string>
    <string name="search_name">Search Name</string>
    <string name="select_country">Select Country</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="my_last_price_is">My last price is...</string>
    <string name="done">Done</string>
    <string name="your_offer">Your offer</string>
    <string name="accept_offer_msg">I accept the offer, Lets meet and close the deal.</string>
    <string name="today">Today</string>


</resources>