<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.buysell.screens.common_mobile_form.ViewModelCommonForm" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cLayoutCommonMobileForm"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.common_mobile_form.CommonMobileFormFragment">
    <include
        android:id="@+id/appBarCommonMobileForm"
        layout="@layout/toolbar_layout_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTempBrandCommonMobileForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/txtStyle"
        android:textColor="@color/liteGreay"
        app:layout_constraintTop_toBottomOf="@+id/appBarCommonMobileForm"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etBrandNameCommonMobileForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_filter"
        style="@style/txtStyle"
        android:text="@={model.brandName}"
        android:textColor="@color/liteGreay"
        android:inputType="textPersonName|textCapSentences"
        android:padding="@dimen/_9sdp"
        android:visibility="gone"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtTempBrandCommonMobileForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTempTitleCommonMobileForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="@dimen/topMainMargin"
        style="@style/txtStyle"
        android:textColor="@color/liteGreay"
        app:layout_constraintTop_toBottomOf="@+id/etBrandNameCommonMobileForm"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddTitleCommonMobileForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_filter"
        style="@style/txtStyle"
        android:hint="@string/add_title"
        android:inputType="textPersonName|textCapSentences"
        android:padding="@dimen/litePadding"
        android:textSize="@dimen/normalTextSize"
        android:layout_marginTop="@dimen/topSmallLiteMargin"
        app:layout_constraintTop_toBottomOf="@+id/txtTempTitleCommonMobileForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTempDescriptionCommonMobileForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="@dimen/topMargin"
        style="@style/txtStyle"
        android:textColor="@color/liteGreay"
        app:layout_constraintTop_toBottomOf="@+id/etAddTitleCommonMobileForm"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddDescriptionCommonMobileForm"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/et_filter"
        style="@style/txtStyle"
        android:gravity="top"
        android:hint="@string/discriptionHint"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="@dimen/litePadding"
        android:textSize="@dimen/normalTextSize"
        android:layout_marginTop="@dimen/topSmallLiteMargin"
        app:layout_constraintTop_toBottomOf="@+id/txtTempDescriptionCommonMobileForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextCommonMobileForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/buttonStyle"
        android:fontFamily="@font/inter_medium"
        android:layout_marginBottom="@dimen/mediumBottomMargin"
        android:background="@drawable/round_sign_up_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>