<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewBid"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.bid.BidFragment">

    <include
        android:id="@+id/appBarBid"
        layout="@layout/toolbar_layout_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTempPriceBit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/txtStyle"
        android:textColor="@color/liteGreay"
        app:layout_constraintTop_toBottomOf="@+id/appBarBid"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPriceBid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_filter"
        style="@style/txtStyle"
        android:hint="@string/_0"
        android:inputType="number"
        android:padding="@dimen/_9sdp"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtTempPriceBit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTempMinBidBid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/min_bid"
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/txtStyle"
        android:textColor="@color/liteGreay"
        app:layout_constraintTop_toBottomOf="@+id/etPriceBid"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMinBidBid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_filter"
        style="@style/txtStyle"
        android:hint="@string/_0"
        android:inputType="number"
        android:padding="@dimen/_9sdp"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtTempMinBidBid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextBid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/buttonStyle"
        android:fontFamily="@font/inter_medium"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/round_sign_up_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>